[gd_scene load_steps=4 format=3 uid="uid://c50r70w7rtemi"]

[ext_resource type="Script" path="res://scripts/menu/menu.gd" id="1_88m03"]
[ext_resource type="Texture2D" uid="uid://cvykxu6ljxnw8" path="res://assets/menu/sprites/menu_background.png" id="2_h2r6j"]
[ext_resource type="Theme" uid="uid://btcbtgf4bsm2d" path="res://assets/common/text.tres" id="3_ek28m"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_88m03")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h2r6j")

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ek28m")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MenuButtons" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainMenu/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Hawk Tuah Collection"

[node name="PlayButton" type="Button" parent="MainMenu/MenuButtons"]
layout_mode = 2
text = "Game Select"

[node name="ExitButton" type="Button" parent="MainMenu/MenuButtons"]
layout_mode = 2
text = "Exit"

[node name="Tooltip" type="Label" parent="MainMenu"]
custom_minimum_size = Vector2(566, 23)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
vertical_alignment = 2
autowrap_mode = 3
clip_text = true

[node name="GameSelect" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ek28m")

[node name="MiddleMargin" type="MarginContainer" parent="GameSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 105
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 400

[node name="Games" type="HBoxContainer" parent="GameSelect/MiddleMargin"]
layout_mode = 2

[node name="HawkyTuah" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hawky Tuah"
autowrap_mode = 3

[node name="HawkyTuahNight" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hawky Tuah (Night Mode)"
autowrap_mode = 3

[node name="Hawksweeper" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Hawksweeper"
autowrap_mode = 3

[node name="TwentyFortyTuah" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Twenty Forty Tuah"
autowrap_mode = 3

[node name="ReturnButton" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Menu"
autowrap_mode = 3

[connection signal="mouse_entered" from="MainMenu/MenuButtons/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/MenuButtons/PlayButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MainMenu/MenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="MainMenu/MenuButtons/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/MenuButtons/ExitButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MainMenu/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="GameSelect/MiddleMargin/Games/HawkyTuah" to="." method="_on_hawky_tuah_mouse_entered"]
[connection signal="mouse_exited" from="GameSelect/MiddleMargin/Games/HawkyTuah" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="GameSelect/MiddleMargin/Games/HawkyTuah" to="." method="_on_hawky_tuah_pressed"]
[connection signal="mouse_entered" from="GameSelect/MiddleMargin/Games/HawkyTuahNight" to="." method="_on_hawky_tuah_night_mouse_entered"]
[connection signal="mouse_exited" from="GameSelect/MiddleMargin/Games/HawkyTuahNight" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="GameSelect/MiddleMargin/Games/HawkyTuahNight" to="." method="_on_hawky_tuah_night_pressed"]
[connection signal="mouse_entered" from="GameSelect/MiddleMargin/Games/Hawksweeper" to="." method="_on_hawksweeper_mouse_entered"]
[connection signal="mouse_exited" from="GameSelect/MiddleMargin/Games/Hawksweeper" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_entered" from="GameSelect/MiddleMargin/Games/TwentyFortyTuah" to="." method="_on_twenty_forty_tuah_mouse_entered"]
[connection signal="mouse_exited" from="GameSelect/MiddleMargin/Games/TwentyFortyTuah" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_entered" from="GameSelect/MiddleMargin/Games/ReturnButton" to="." method="_on_return_button_mouse_entered"]
[connection signal="mouse_exited" from="GameSelect/MiddleMargin/Games/ReturnButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="GameSelect/MiddleMargin/Games/ReturnButton" to="." method="_on_return_button_pressed"]
